Fixed message issue on safari.

--- a/FrontEnd/code/src/common/components/Header/Header.module.sass
+++ b/FrontEnd/code/src/common/components/Header/Header.module.sass
@@ -6,7 +6,7 @@
     z-index: 10
     padding: 24px 0
     +m
-        padding: 48px 0 24px
+        padding: 0.75rem 0
 
     &.wide
         .container
