--- a/FrontEnd/code/src/screens/MessageCenter/Messages/Messages.module.sass
+++ b/FrontEnd/code/src/screens/MessageCenter/Messages/Messages.module.sass
@@ -52,7 +52,6 @@
     margin: 0 auto
     padding: 48px 48px 16px
     flex-direction: column-reverse
-    row-gap: 32px
     padding-bottom: 64px
     max-width: 1024px
     +a
