--- a/FrontEnd/code/src/screens/MessageCenter/Messages/type/Message/Message.module.sass
+++ b/FrontEnd/code/src/screens/MessageCenter/Messages/type/Message/Message.module.sass
@@ -6,6 +6,7 @@
     flex-direction: column
     width: 100%
     row-gap: 8px
+    margin-bottom: 32px
 
     &.you
         align-items: flex-end
