--- a/FrontEnd/code/src/styles/helpers.sass
+++ b/FrontEnd/code/src/styles/helpers.sass
@@ -78,98 +78,98 @@ $n8: #FCFCFD
 
 =hero
     +dm-sans
-    font-size: 96px
+    font-size: 6rem
     line-height: 1
     font-weight: 700
     letter-spacing: -.02em
 
 =headline-1
     +dm-sans
-    font-size: 64px
+    font-size: 4rem
     line-height: 1
     font-weight: 700
     letter-spacing: -.02em
 
 =headline-2
     +dm-sans
-    font-size: 48px
+    font-size: 3rem
     line-height: (56/48)
     font-weight: 700
     letter-spacing: -.02em
 
 =headline-3
     +dm-sans
-    font-size: 40px
+    font-size: 2.5rem
     line-height: (48/40)
     font-weight: 700
     letter-spacing: -.01em
 
 =headline-4
     +dm-sans
-    font-size: 32px
+    font-size: 2rem
     line-height: (40/32)
     font-weight: 700
     letter-spacing: -.01em
 
 =body-1
-    font-size: 24px
+    font-size: 1.5rem
     line-height: (32/24)
     letter-spacing: -.01em
 
 =body-bold-1
-    font-size: 24px
+    font-size: 1.5rem
     line-height: (32/24)
     font-weight: 600
     letter-spacing: -.01em
 
 =body-2
-    font-size: 16px
+    font-size: 1rem
     line-height: (24/16)
 
 =body-bold-2
-    font-size: 14px
+    font-size: 0.875rem
     line-height: (24/16)
     font-weight: 600
 
 =caption-1
-    font-size: 14px
+    font-size: 0.875rem
     line-height: (24/14)
 
 =caption-bold-1
-    font-size: 14px
+    font-size: 0.875rem
     line-height: (24/14)
     font-weight: 500
 
 =caption-2
-    font-size: 12px
+    font-size: 0.75rem
     line-height: (20/12)
 
 =caption-bold-2
-    font-size: 12px
+    font-size: 0.75rem
     line-height: (20/12)
     font-weight: 600
 
 =hairline-1
-    font-size: 16px
+    font-size: 1rem
     line-height: 1
     font-weight: 700
     text-transform: uppercase
 
 =hairline-2
-    font-size: 12px
+    font-size: 0.75rem
     line-height: 1
     font-weight: 700
     text-transform: uppercase
 
 =button-1
     +dm-sans
-    font-size: 16px
+    font-size: 1rem
     font-weight: 700
     line-height: 1
 
 =button-2
     +dm-sans
-    font-size: 14px
+    font-size: 0.875rem
     line-height: (16/14)
     font-weight: 700
 
